vendor/linux/x64/ftd2xx.h


/** @name FT_HANDLE 
 * An opaque value used as a handle to an opened FT device.
 */
typedef PVOID	FT_HANDLE;


/** @{
 * @name FT_STATUS 
 * @details Return status values for API calls. 
 */
typedef ULONG	FT_STATUS;


	/** @noop FT_GetStatus
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Gets the device status including number of characters in the receive queue, number of characters in the
	 * transmit queue, and the current event status.
	 * @param ftHandle Handle of the device.
	 * @param lpdwAmountInRxQueue Pointer to a variable of type DWORD which receives the number of characters in
	 * the receive queue.
	 * @param lpdwAmountInTxQueue Pointer to a variable of type DWORD which receives the number of characters in
	 * the transmit queue.
	 * @param lpdwEventStatus Pointer to a variable of type DWORD which receives the current state of
	 * the event status.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * For an example of how to use this function, see the sample code in FT_SetEventNotification.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_GetStatus(
		FT_HANDLE ftHandle,
		DWORD *lpdwAmountInRxQueue,
		DWORD *lpdwAmountInTxQueue,
		DWORD *lpdwEventStatus
		);


	/** @noop FT_SetBreakOn
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Sets the BREAK condition for the device.
	 * @param ftHandle Handle of the device.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code	
	 */
	FTD2XX_API FT_STATUS WINAPI FT_SetBreakOn(
		FT_HANDLE ftHandle
		);


	/** @noop FT_SetBreakOff
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Resets the BREAK condition for the device.
	 * @param ftHandle Handle of the device.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_SetBreakOff(
		FT_HANDLE ftHandle
		);


	/** @noop FT_SetWaitMask
	 * Undocumented function.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_SetWaitMask(
		FT_HANDLE ftHandle,
		DWORD Mask
		);


	/** @noop FT_WaitOnMask
	 * Undocumented function.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_WaitOnMask(
		FT_HANDLE ftHandle,
		DWORD *Mask
		);


	/** @noop FT_GetEventStatus
	 * Undocumented function.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_GetEventStatus(
		FT_HANDLE ftHandle,
		DWORD *dwEventDWord
		);


/** @} */

/** @name EEPROM Programming Interface Functions
 * FTDI device EEPROMs can be both read and programmed using the functions listed in this section.
 * @n Please note the following information:
 * @li The Maximum length of the Manufacturer, ManufacturerId, Description and SerialNumber strings
 * is 48 words (1 word = 2 bytes).
 * @li The first two characters of the serial number are the manufacturer ID.
 * @li The Manufacturer string length plus the Description string length is less than or equal to 40
 * characters with the following functions: FT_EE_Read, FT_EE_Program, FT_EE_ProgramEx, 
 * FT_EEPROM_Read, FT_EEPROM_Program.
 * @li The serial number should be maximum 15 characters long on single port devices (eg FT232R, FT-X) 
 * and 14 characters on multi port devices (eg FT2232H, FT4232H). If it is longer then it may be
 * truncated and will not have a null terminator.

 * For instance a serial number which is 15 characters long on a multi-port device will have an 
 * effective serial number which is 16 characters long since the serial number is appended with the 
 * channel identifier (A,B,etc). The buffer used to return the string from the API is only 16 
 * characters in size so the NULL termination will be lost.
 * @n If the serial number or description are too long in the EEPROM or configuration of a device then the
 * strings returned by FT_GetDeviceInfo and FT_ListDevices may not be NULL terminated
 */
/** @{ */

	/** @noop FT_ReadEE
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Read a value from an EEPROM location.
	 * @param ftHandle Handle of the device.
	 * @param dwWordOffset EEPROM location to read from.
	 * @param lpwValue Pointer to the WORD value read from the EEPROM.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * EEPROMs for FTDI devices are organised by WORD, so each value returned is 16-bits wide.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_ReadEE(
		FT_HANDLE ftHandle,
		DWORD dwWordOffset,
		LPWORD lpwValue
		);


	/** @noop FT_WriteEE
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Write a value to an EEPROM location.
	 * @param ftHandle Handle of the device.
	 * @param dwWordOffset EEPROM location to read from.
	 * @param wValue The WORD value write to the EEPROM.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * EEPROMs for FTDI devices are organised by WORD, so each value written to the EEPROM is 
	 * 16-bits wide.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_WriteEE(
		FT_HANDLE ftHandle,
		DWORD dwWordOffset,
		WORD wValue
		);


	/** @noop FT_EraseEE
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Erases the device EEPROM.
	 * @param ftHandle Handle of the device.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * This function will erase the entire contents of an EEPROM, including the user area.
	 * Note that the FT232R	and FT245R devices have an internal EEPROM that cannot be erased.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_EraseEE(
		FT_HANDLE ftHandle
		);


	/**
	 * Structure to hold program data for FT_EE_Program, FT_EE_ProgramEx, FT_EE_Read 
	 * and FT_EE_ReadEx functions.
	 * @see FT_EE_Read
	 * @see FT_EE_ReadEx
	 * @see FT_EE_Program
	 * @see FT_EE_ProgramEx
	 */
	typedef struct ft_program_data {

		DWORD Signature1;			/// Header - must be 0x00000000 
		DWORD Signature2;			/// Header - must be 0xffffffff
		DWORD Version;				/// Header - FT_PROGRAM_DATA version
		//			0 = original
		//			1 = FT2232 extensions
		//			2 = FT232R extensions
		//			3 = FT2232H extensions
		//			4 = FT4232H extensions
		//			5 = FT232H extensions

		WORD VendorId;				/// 0x0403
		WORD ProductId;				/// 0x6001
		char *Manufacturer;			/// "FTDI"
		char *ManufacturerId;		/// "FT"
		char *Description;			/// "USB HS Serial Converter"
		char *SerialNumber;			/// "FT000001" if fixed, or NULL
		WORD MaxPower;				/// 0 < MaxPower <= 500
		WORD PnP;					/// 0 = disabled, 1 = enabled
		WORD SelfPowered;			/// 0 = bus powered, 1 = self powered
		WORD RemoteWakeup;			/// 0 = not capable, 1 = capable
		/// Rev4 (FT232B) extensions
		UCHAR Rev4;					/// non-zero if Rev4 chip, zero otherwise
		UCHAR IsoIn;				/// non-zero if in endpoint is isochronous
		UCHAR IsoOut;				/// non-zero if out endpoint is isochronous
		UCHAR PullDownEnable;		/// non-zero if pull down enabled
		UCHAR SerNumEnable;			/// non-zero if serial number to be used
		UCHAR USBVersionEnable;		/// non-zero if chip uses USBVersion
		WORD USBVersion;			/// BCD (0x0200 => USB2)
		/// Rev 5 (FT2232) extensions
		UCHAR Rev5;					/// non-zero if Rev5 chip, zero otherwise
		UCHAR IsoInA;				/// non-zero if in endpoint is isochronous
		UCHAR IsoInB;				/// non-zero if in endpoint is isochronous
		UCHAR IsoOutA;				/// non-zero if out endpoint is isochronous
		UCHAR IsoOutB;				/// non-zero if out endpoint is isochronous
		UCHAR PullDownEnable5;		/// non-zero if pull down enabled
		UCHAR SerNumEnable5;		/// non-zero if serial number to be used
		UCHAR USBVersionEnable5;	/// non-zero if chip uses USBVersion
		WORD USBVersion5;			/// BCD (0x0200 => USB2)
		UCHAR AIsHighCurrent;		/// non-zero if interface is high current
		UCHAR BIsHighCurrent;		/// non-zero if interface is high current
		UCHAR IFAIsFifo;			/// non-zero if interface is 245 FIFO
		UCHAR IFAIsFifoTar;			/// non-zero if interface is 245 FIFO CPU target
		UCHAR IFAIsFastSer;			/// non-zero if interface is Fast serial
		UCHAR AIsVCP;				/// non-zero if interface is to use VCP drivers
		UCHAR IFBIsFifo;			/// non-zero if interface is 245 FIFO
		UCHAR IFBIsFifoTar;			/// non-zero if interface is 245 FIFO CPU target
		UCHAR IFBIsFastSer;			/// non-zero if interface is Fast serial
		UCHAR BIsVCP;				/// non-zero if interface is to use VCP drivers
		/// Rev 6 (FT232R) extensions
		UCHAR UseExtOsc;			/// Use External Oscillator
		UCHAR HighDriveIOs;			/// High Drive I/Os
		UCHAR EndpointSize;			/// Endpoint size
		UCHAR PullDownEnableR;		/// non-zero if pull down enabled
		UCHAR SerNumEnableR;		/// non-zero if serial number to be used
		UCHAR InvertTXD;			/// non-zero if invert TXD
		UCHAR InvertRXD;			/// non-zero if invert RXD
		UCHAR InvertRTS;			/// non-zero if invert RTS
		UCHAR InvertCTS;			/// non-zero if invert CTS
		UCHAR InvertDTR;			/// non-zero if invert DTR
		UCHAR InvertDSR;			/// non-zero if invert DSR
		UCHAR InvertDCD;			/// non-zero if invert DCD
		UCHAR InvertRI;				/// non-zero if invert RI
		UCHAR Cbus0;				/// Cbus Mux control
		UCHAR Cbus1;				/// Cbus Mux control
		UCHAR Cbus2;				/// Cbus Mux control
		UCHAR Cbus3;				/// Cbus Mux control
		UCHAR Cbus4;				/// Cbus Mux control
		UCHAR RIsD2XX;				/// non-zero if using D2XX driver
		/// Rev 7 (FT2232H) Extensions
		UCHAR PullDownEnable7;		/// non-zero if pull down enabled
		UCHAR SerNumEnable7;		/// non-zero if serial number to be used
		UCHAR ALSlowSlew;			/// non-zero if AL pins have slow slew
		UCHAR ALSchmittInput;		/// non-zero if AL pins are Schmitt input
		UCHAR ALDriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR AHSlowSlew;			/// non-zero if AH pins have slow slew
		UCHAR AHSchmittInput;		/// non-zero if AH pins are Schmitt input
		UCHAR AHDriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR BLSlowSlew;			/// non-zero if BL pins have slow slew
		UCHAR BLSchmittInput;		/// non-zero if BL pins are Schmitt input
		UCHAR BLDriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR BHSlowSlew;			/// non-zero if BH pins have slow slew
		UCHAR BHSchmittInput;		/// non-zero if BH pins are Schmitt input
		UCHAR BHDriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR IFAIsFifo7;			/// non-zero if interface is 245 FIFO
		UCHAR IFAIsFifoTar7;		/// non-zero if interface is 245 FIFO CPU target
		UCHAR IFAIsFastSer7;		/// non-zero if interface is Fast serial
		UCHAR AIsVCP7;				/// non-zero if interface is to use VCP drivers
		UCHAR IFBIsFifo7;			/// non-zero if interface is 245 FIFO
		UCHAR IFBIsFifoTar7;		/// non-zero if interface is 245 FIFO CPU target
		UCHAR IFBIsFastSer7;		/// non-zero if interface is Fast serial
		UCHAR BIsVCP7;				/// non-zero if interface is to use VCP drivers
		UCHAR PowerSaveEnable;		/// non-zero if using BCBUS7 to save power for self-powered designs
		/// Rev 8 (FT4232H) Extensions
		UCHAR PullDownEnable8;		/// non-zero if pull down enabled
		UCHAR SerNumEnable8;		/// non-zero if serial number to be used
		UCHAR ASlowSlew;			/// non-zero if A pins have slow slew
		UCHAR ASchmittInput;		/// non-zero if A pins are Schmitt input
		UCHAR ADriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR BSlowSlew;			/// non-zero if B pins have slow slew
		UCHAR BSchmittInput;		/// non-zero if B pins are Schmitt input
		UCHAR BDriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR CSlowSlew;			/// non-zero if C pins have slow slew
		UCHAR CSchmittInput;		/// non-zero if C pins are Schmitt input
		UCHAR CDriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR DSlowSlew;			/// non-zero if D pins have slow slew
		UCHAR DSchmittInput;		/// non-zero if D pins are Schmitt input
		UCHAR DDriveCurrent;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR ARIIsTXDEN;			/// non-zero if port A uses RI as RS485 TXDEN
		UCHAR BRIIsTXDEN;			/// non-zero if port B uses RI as RS485 TXDEN
		UCHAR CRIIsTXDEN;			/// non-zero if port C uses RI as RS485 TXDEN
		UCHAR DRIIsTXDEN;			/// non-zero if port D uses RI as RS485 TXDEN
		UCHAR AIsVCP8;				/// non-zero if interface is to use VCP drivers
		UCHAR BIsVCP8;				/// non-zero if interface is to use VCP drivers
		UCHAR CIsVCP8;				/// non-zero if interface is to use VCP drivers
		UCHAR DIsVCP8;				/// non-zero if interface is to use VCP drivers
		/// Rev 9 (FT232H) Extensions
		UCHAR PullDownEnableH;		/// non-zero if pull down enabled
		UCHAR SerNumEnableH;		/// non-zero if serial number to be used
		UCHAR ACSlowSlewH;			/// non-zero if AC pins have slow slew
		UCHAR ACSchmittInputH;		/// non-zero if AC pins are Schmitt input
		UCHAR ACDriveCurrentH;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR ADSlowSlewH;			/// non-zero if AD pins have slow slew
		UCHAR ADSchmittInputH;		/// non-zero if AD pins are Schmitt input
		UCHAR ADDriveCurrentH;		/// valid values are 4mA, 8mA, 12mA, 16mA
		UCHAR Cbus0H;				/// Cbus Mux control
		UCHAR Cbus1H;				/// Cbus Mux control
		UCHAR Cbus2H;				/// Cbus Mux control
		UCHAR Cbus3H;				/// Cbus Mux control
		UCHAR Cbus4H;				/// Cbus Mux control
		UCHAR Cbus5H;				/// Cbus Mux control
		UCHAR Cbus6H;				/// Cbus Mux control
		UCHAR Cbus7H;				/// Cbus Mux control
		UCHAR Cbus8H;				/// Cbus Mux control
		UCHAR Cbus9H;				/// Cbus Mux control
		UCHAR IsFifoH;				/// non-zero if interface is 245 FIFO
		UCHAR IsFifoTarH;			/// non-zero if interface is 245 FIFO CPU target
		UCHAR IsFastSerH;			/// non-zero if interface is Fast serial
		UCHAR IsFT1248H;			/// non-zero if interface is FT1248
		UCHAR FT1248CpolH;			/// FT1248 clock polarity - clock idle high (1) or clock idle low (0)
		UCHAR FT1248LsbH;			/// FT1248 data is LSB (1) or MSB (0)
		UCHAR FT1248FlowControlH;	/// FT1248 flow control enable
		UCHAR IsVCPH;				/// non-zero if interface is to use VCP drivers
		UCHAR PowerSaveEnableH;		/// non-zero if using ACBUS7 to save power for self-powered designs

	} FT_PROGRAM_DATA, *PFT_PROGRAM_DATA;